# SIFT

./: CMakeLists.txt  README.md  SIFT.cpp  SIFT.h  main.cpp
